# Lution

./: .gitignore  LICENSE  LutionConfig.toml  README.md  build.py  build.sh  crowdin.yml  main.py  pyproject.toml  requirements.txt  test.toml
.githooks/: pre-commit
.github/workflows/: CI.yml  build-appimageNuitka.yml  crowdin.yml
screenshots/: screenshots.md
scripts/: build.sh  chroma-quick-launch.desktop  chroma.desktop  install.sh  setup.sh  uninstall.sh
src/: LutionConfig.toml  boostrap.sh  main.py  resources.qrc  run.sh  run_with_uvpk.sh  runwithoutqt.sh  test.py  update.sh
src/Lution/: .marketplace_cache.json  boostrap.py  gurt.py  launch.py  main.py  requirements.txt  test.py
src/Lution/.streamlit/: config.toml
src/Lution/files/: advanced_editor.ui  peak.ui  playerlogs.ui
src/Lution/markdown/: about.md  whatsnew.md  whatsnew.md.example
src/Lution/modules/: vlz.py
src/Lution/pages/: about.py  appearance.py  apply.py  contributors.py  fflags.py  lutionsettings.py  marketplace.py  mod_generator.py  mods.py
src/Lution/uis/: marketplace_card.ui  page_appear.py  page_appear.ui  page_fflags.py  page_installed.py  page_marketplace.py  page_mods.py  page_mods.ui
src/modules/: backend.py
src/modules/backendf/: __init__.py
src/modules/config/: __init__.py  config_init.py  sober_config.py
src/modules/launchmenu/: __init__.py  splashMan.py
src/modules/marketplace/: __init__.py
src/modules/mod/: fontreplace.py  patch.py
src/modules/utils/: namegrabber.py
src/resources/i18n/: af_ZA.ts  ar_SA.ts  ca_ES.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  el_GR.ts  (+26 more)
(+119 files in other folders)
